simple/simple.output
State 43 conflicts: 3 shift/reduce
State 44 conflicts: 3 shift/reduce
State 45 conflicts: 3 shift/reduce
State 46 conflicts: 3 shift/reduce
State 47 conflicts: 3 shift/reduce
State 48 conflicts: 8 shift/reduce
State 49 conflicts: 8 shift/reduce
State 50 conflicts: 8 shift/reduce


Grammar

    0 $accept: program $end

    1 $@1: /* empty */

    2 program: LET declarations IN $@1 commands END

    3 declarations: /* empty */
    4             | INTEGER id_seq IDENTIFIER '.'

    5 id_seq: /* empty */
    6       | id_seq IDENTIFIER ','

    7 commands: /* empty */
    8         | commands command ';'

    9 command: SKIP
   10        | READ IDENTIFIER
   11        | WRITE exp
   12        | IDENTIFIER ASSGNOP exp

   13 $@2: /* empty */

   14 $@3: /* empty */

   15 $@4: /* empty */

   16 command: IF exp $@2 THEN commands $@3 ELSE $@4 commands FI

   17 $@5: /* empty */

   18 $@6: /* empty */

   19 command: WHILE $@5 exp $@6 DO commands END

   20 exp: NUMBER
   21    | IDENTIFIER
   22    | exp '<' exp
   23    | exp '=' exp
   24    | exp '>' exp
   25    | exp '+' exp
   26    | exp '-' exp
   27    | exp '*' exp
   28    | exp '/' exp
   29    | exp '^' exp
   30    | '(' exp ')'


Terminals, with rules where they appear

$end (0) 0
'(' (40) 30
')' (41) 30
'*' (42) 27
'+' (43) 25
',' (44) 6
'-' (45) 26
'.' (46) 4
'/' (47) 28
';' (59) 8
'<' (60) 22
'=' (61) 23
'>' (62) 24
'^' (94) 29
error (256)
NUMBER (258) 20
IDENTIFIER (259) 4 6 10 12 21
IF (260) 16
WHILE (261) 19
SKIP (262) 9
THEN (263) 16
ELSE (264) 16
FI (265) 16
DO (266) 19
END (267) 2 19
INTEGER (268) 4
READ (269) 10
WRITE (270) 11
LET (271) 2
IN (272) 2
ASSGNOP (273) 12


Nonterminals, with rules where they appear

$accept (32)
    on left: 0
program (33)
    on left: 2, on right: 0
$@1 (34)
    on left: 1, on right: 2
declarations (35)
    on left: 3 4, on right: 2
id_seq (36)
    on left: 5 6, on right: 4 6
commands (37)
    on left: 7 8, on right: 2 8 16 19
command (38)
    on left: 9 10 11 12 16 19, on right: 8
$@2 (39)
    on left: 13, on right: 16
$@3 (40)
    on left: 14, on right: 16
$@4 (41)
    on left: 15, on right: 16
$@5 (42)
    on left: 17, on right: 19
$@6 (43)
    on left: 18, on right: 19
exp (44)
    on left: 20 21 22 23 24 25 26 27 28 29 30, on right: 11 12 16 19
    22 23 24 25 26 27 28 29 30


state 0

    0 $accept: . program $end

    LET  shift, and go to state 1

    program  go to state 2


state 1

    2 program: LET . declarations IN $@1 commands END

    INTEGER  shift, and go to state 3

    $default  reduce using rule 3 (declarations)

    declarations  go to state 4


state 2

    0 $accept: program . $end

    $end  shift, and go to state 5


state 3

    4 declarations: INTEGER . id_seq IDENTIFIER '.'

    $default  reduce using rule 5 (id_seq)

    id_seq  go to state 6


state 4

    2 program: LET declarations . IN $@1 commands END

    IN  shift, and go to state 7


state 5

    0 $accept: program $end .

    $default  accept


state 6

    4 declarations: INTEGER id_seq . IDENTIFIER '.'
    6 id_seq: id_seq . IDENTIFIER ','

    IDENTIFIER  shift, and go to state 8


state 7

    2 program: LET declarations IN . $@1 commands END

    $default  reduce using rule 1 ($@1)

    $@1  go to state 9


state 8

    4 declarations: INTEGER id_seq IDENTIFIER . '.'
    6 id_seq: id_seq IDENTIFIER . ','

    '.'  shift, and go to state 10
    ','  shift, and go to state 11


state 9

    2 program: LET declarations IN $@1 . commands END

    $default  reduce using rule 7 (commands)

    commands  go to state 12


state 10

    4 declarations: INTEGER id_seq IDENTIFIER '.' .

    $default  reduce using rule 4 (declarations)


state 11

    6 id_seq: id_seq IDENTIFIER ',' .

    $default  reduce using rule 6 (id_seq)


state 12

    2 program: LET declarations IN $@1 commands . END
    8 commands: commands . command ';'

    IDENTIFIER  shift, and go to state 13
    IF          shift, and go to state 14
    WHILE       shift, and go to state 15
    SKIP        shift, and go to state 16
    END         shift, and go to state 17
    READ        shift, and go to state 18
    WRITE       shift, and go to state 19

    command  go to state 20


state 13

   12 command: IDENTIFIER . ASSGNOP exp

    ASSGNOP  shift, and go to state 21


state 14

   16 command: IF . exp $@2 THEN commands $@3 ELSE $@4 commands FI

    NUMBER      shift, and go to state 22
    IDENTIFIER  shift, and go to state 23
    '('         shift, and go to state 24

    exp  go to state 25


state 15

   19 command: WHILE . $@5 exp $@6 DO commands END

    $default  reduce using rule 17 ($@5)

    $@5  go to state 26


state 16

    9 command: SKIP .

    $default  reduce using rule 9 (command)


state 17

    2 program: LET declarations IN $@1 commands END .

    $default  reduce using rule 2 (program)


state 18

   10 command: READ . IDENTIFIER

    IDENTIFIER  shift, and go to state 27


state 19

   11 command: WRITE . exp

    NUMBER      shift, and go to state 22
    IDENTIFIER  shift, and go to state 23
    '('         shift, and go to state 24

    exp  go to state 28


state 20

    8 commands: commands command . ';'

    ';'  shift, and go to state 29


state 21

   12 command: IDENTIFIER ASSGNOP . exp

    NUMBER      shift, and go to state 22
    IDENTIFIER  shift, and go to state 23
    '('         shift, and go to state 24

    exp  go to state 30


state 22

   20 exp: NUMBER .

    $default  reduce using rule 20 (exp)


state 23

   21 exp: IDENTIFIER .

    $default  reduce using rule 21 (exp)


state 24

   30 exp: '(' . exp ')'

    NUMBER      shift, and go to state 22
    IDENTIFIER  shift, and go to state 23
    '('         shift, and go to state 24

    exp  go to state 31


state 25

   16 command: IF exp . $@2 THEN commands $@3 ELSE $@4 commands FI
   22 exp: exp . '<' exp
   23    | exp . '=' exp
   24    | exp . '>' exp
   25    | exp . '+' exp
   26    | exp . '-' exp
   27    | exp . '*' exp
   28    | exp . '/' exp
   29    | exp . '^' exp

    '-'  shift, and go to state 32
    '+'  shift, and go to state 33
    '*'  shift, and go to state 34
    '/'  shift, and go to state 35
    '^'  shift, and go to state 36
    '<'  shift, and go to state 37
    '='  shift, and go to state 38
    '>'  shift, and go to state 39

    $default  reduce using rule 13 ($@2)

    $@2  go to state 40


state 26

   19 command: WHILE $@5 . exp $@6 DO commands END

    NUMBER      shift, and go to state 22
    IDENTIFIER  shift, and go to state 23
    '('         shift, and go to state 24

    exp  go to state 41


state 27

   10 command: READ IDENTIFIER .

    $default  reduce using rule 10 (command)


state 28

   11 command: WRITE exp .
   22 exp: exp . '<' exp
   23    | exp . '=' exp
   24    | exp . '>' exp
   25    | exp . '+' exp
   26    | exp . '-' exp
   27    | exp . '*' exp
   28    | exp . '/' exp
   29    | exp . '^' exp

    '-'  shift, and go to state 32
    '+'  shift, and go to state 33
    '*'  shift, and go to state 34
    '/'  shift, and go to state 35
    '^'  shift, and go to state 36
    '<'  shift, and go to state 37
    '='  shift, and go to state 38
    '>'  shift, and go to state 39

    $default  reduce using rule 11 (command)


state 29

    8 commands: commands command ';' .

    $default  reduce using rule 8 (commands)


state 30

   12 command: IDENTIFIER ASSGNOP exp .
   22 exp: exp . '<' exp
   23    | exp . '=' exp
   24    | exp . '>' exp
   25    | exp . '+' exp
   26    | exp . '-' exp
   27    | exp . '*' exp
   28    | exp . '/' exp
   29    | exp . '^' exp

    '-'  shift, and go to state 32
    '+'  shift, and go to state 33
    '*'  shift, and go to state 34
    '/'  shift, and go to state 35
    '^'  shift, and go to state 36
    '<'  shift, and go to state 37
    '='  shift, and go to state 38
    '>'  shift, and go to state 39

    $default  reduce using rule 12 (command)


state 31

   22 exp: exp . '<' exp
   23    | exp . '=' exp
   24    | exp . '>' exp
   25    | exp . '+' exp
   26    | exp . '-' exp
   27    | exp . '*' exp
   28    | exp . '/' exp
   29    | exp . '^' exp
   30    | '(' exp . ')'

    '-'  shift, and go to state 32
    '+'  shift, and go to state 33
    '*'  shift, and go to state 34
    '/'  shift, and go to state 35
    '^'  shift, and go to state 36
    '<'  shift, and go to state 37
    '='  shift, and go to state 38
    '>'  shift, and go to state 39
    ')'  shift, and go to state 42


state 32

   26 exp: exp '-' . exp

    NUMBER      shift, and go to state 22
    IDENTIFIER  shift, and go to state 23
    '('         shift, and go to state 24

    exp  go to state 43


state 33

   25 exp: exp '+' . exp

    NUMBER      shift, and go to state 22
    IDENTIFIER  shift, and go to state 23
    '('         shift, and go to state 24

    exp  go to state 44


state 34

   27 exp: exp '*' . exp

    NUMBER      shift, and go to state 22
    IDENTIFIER  shift, and go to state 23
    '('         shift, and go to state 24

    exp  go to state 45


state 35

   28 exp: exp '/' . exp

    NUMBER      shift, and go to state 22
    IDENTIFIER  shift, and go to state 23
    '('         shift, and go to state 24

    exp  go to state 46


state 36

   29 exp: exp '^' . exp

    NUMBER      shift, and go to state 22
    IDENTIFIER  shift, and go to state 23
    '('         shift, and go to state 24

    exp  go to state 47


state 37

   22 exp: exp '<' . exp

    NUMBER      shift, and go to state 22
    IDENTIFIER  shift, and go to state 23
    '('         shift, and go to state 24

    exp  go to state 48


state 38

   23 exp: exp '=' . exp

    NUMBER      shift, and go to state 22
    IDENTIFIER  shift, and go to state 23
    '('         shift, and go to state 24

    exp  go to state 49


state 39

   24 exp: exp '>' . exp

    NUMBER      shift, and go to state 22
    IDENTIFIER  shift, and go to state 23
    '('         shift, and go to state 24

    exp  go to state 50


state 40

   16 command: IF exp $@2 . THEN commands $@3 ELSE $@4 commands FI

    THEN  shift, and go to state 51


state 41

   19 command: WHILE $@5 exp . $@6 DO commands END
   22 exp: exp . '<' exp
   23    | exp . '=' exp
   24    | exp . '>' exp
   25    | exp . '+' exp
   26    | exp . '-' exp
   27    | exp . '*' exp
   28    | exp . '/' exp
   29    | exp . '^' exp

    '-'  shift, and go to state 32
    '+'  shift, and go to state 33
    '*'  shift, and go to state 34
    '/'  shift, and go to state 35
    '^'  shift, and go to state 36
    '<'  shift, and go to state 37
    '='  shift, and go to state 38
    '>'  shift, and go to state 39

    $default  reduce using rule 18 ($@6)

    $@6  go to state 52


state 42

   30 exp: '(' exp ')' .

    $default  reduce using rule 30 (exp)


state 43

   22 exp: exp . '<' exp
   23    | exp . '=' exp
   24    | exp . '>' exp
   25    | exp . '+' exp
   26    | exp . '-' exp
   26    | exp '-' exp .
   27    | exp . '*' exp
   28    | exp . '/' exp
   29    | exp . '^' exp

    '*'  shift, and go to state 34
    '/'  shift, and go to state 35
    '^'  shift, and go to state 36
    '<'  shift, and go to state 37
    '='  shift, and go to state 38
    '>'  shift, and go to state 39

    '<'       [reduce using rule 26 (exp)]
    '='       [reduce using rule 26 (exp)]
    '>'       [reduce using rule 26 (exp)]
    $default  reduce using rule 26 (exp)


state 44

   22 exp: exp . '<' exp
   23    | exp . '=' exp
   24    | exp . '>' exp
   25    | exp . '+' exp
   25    | exp '+' exp .
   26    | exp . '-' exp
   27    | exp . '*' exp
   28    | exp . '/' exp
   29    | exp . '^' exp

    '*'  shift, and go to state 34
    '/'  shift, and go to state 35
    '^'  shift, and go to state 36
    '<'  shift, and go to state 37
    '='  shift, and go to state 38
    '>'  shift, and go to state 39

    '<'       [reduce using rule 25 (exp)]
    '='       [reduce using rule 25 (exp)]
    '>'       [reduce using rule 25 (exp)]
    $default  reduce using rule 25 (exp)


state 45

   22 exp: exp . '<' exp
   23    | exp . '=' exp
   24    | exp . '>' exp
   25    | exp . '+' exp
   26    | exp . '-' exp
   27    | exp . '*' exp
   27    | exp '*' exp .
   28    | exp . '/' exp
   29    | exp . '^' exp

    '^'  shift, and go to state 36
    '<'  shift, and go to state 37
    '='  shift, and go to state 38
    '>'  shift, and go to state 39

    '<'       [reduce using rule 27 (exp)]
    '='       [reduce using rule 27 (exp)]
    '>'       [reduce using rule 27 (exp)]
    $default  reduce using rule 27 (exp)


state 46

   22 exp: exp . '<' exp
   23    | exp . '=' exp
   24    | exp . '>' exp
   25    | exp . '+' exp
   26    | exp . '-' exp
   27    | exp . '*' exp
   28    | exp . '/' exp
   28    | exp '/' exp .
   29    | exp . '^' exp

    '^'  shift, and go to state 36
    '<'  shift, and go to state 37
    '='  shift, and go to state 38
    '>'  shift, and go to state 39

    '<'       [reduce using rule 28 (exp)]
    '='       [reduce using rule 28 (exp)]
    '>'       [reduce using rule 28 (exp)]
    $default  reduce using rule 28 (exp)


state 47

   22 exp: exp . '<' exp
   23    | exp . '=' exp
   24    | exp . '>' exp
   25    | exp . '+' exp
   26    | exp . '-' exp
   27    | exp . '*' exp
   28    | exp . '/' exp
   29    | exp . '^' exp
   29    | exp '^' exp .

    '^'  shift, and go to state 36
    '<'  shift, and go to state 37
    '='  shift, and go to state 38
    '>'  shift, and go to state 39

    '<'       [reduce using rule 29 (exp)]
    '='       [reduce using rule 29 (exp)]
    '>'       [reduce using rule 29 (exp)]
    $default  reduce using rule 29 (exp)


state 48

   22 exp: exp . '<' exp
   22    | exp '<' exp .
   23    | exp . '=' exp
   24    | exp . '>' exp
   25    | exp . '+' exp
   26    | exp . '-' exp
   27    | exp . '*' exp
   28    | exp . '/' exp
   29    | exp . '^' exp

    '-'  shift, and go to state 32
    '+'  shift, and go to state 33
    '*'  shift, and go to state 34
    '/'  shift, and go to state 35
    '^'  shift, and go to state 36
    '<'  shift, and go to state 37
    '='  shift, and go to state 38
    '>'  shift, and go to state 39

    '-'       [reduce using rule 22 (exp)]
    '+'       [reduce using rule 22 (exp)]
    '*'       [reduce using rule 22 (exp)]
    '/'       [reduce using rule 22 (exp)]
    '^'       [reduce using rule 22 (exp)]
    '<'       [reduce using rule 22 (exp)]
    '='       [reduce using rule 22 (exp)]
    '>'       [reduce using rule 22 (exp)]
    $default  reduce using rule 22 (exp)


state 49

   22 exp: exp . '<' exp
   23    | exp . '=' exp
   23    | exp '=' exp .
   24    | exp . '>' exp
   25    | exp . '+' exp
   26    | exp . '-' exp
   27    | exp . '*' exp
   28    | exp . '/' exp
   29    | exp . '^' exp

    '-'  shift, and go to state 32
    '+'  shift, and go to state 33
    '*'  shift, and go to state 34
    '/'  shift, and go to state 35
    '^'  shift, and go to state 36
    '<'  shift, and go to state 37
    '='  shift, and go to state 38
    '>'  shift, and go to state 39

    '-'       [reduce using rule 23 (exp)]
    '+'       [reduce using rule 23 (exp)]
    '*'       [reduce using rule 23 (exp)]
    '/'       [reduce using rule 23 (exp)]
    '^'       [reduce using rule 23 (exp)]
    '<'       [reduce using rule 23 (exp)]
    '='       [reduce using rule 23 (exp)]
    '>'       [reduce using rule 23 (exp)]
    $default  reduce using rule 23 (exp)


state 50

   22 exp: exp . '<' exp
   23    | exp . '=' exp
   24    | exp . '>' exp
   24    | exp '>' exp .
   25    | exp . '+' exp
   26    | exp . '-' exp
   27    | exp . '*' exp
   28    | exp . '/' exp
   29    | exp . '^' exp

    '-'  shift, and go to state 32
    '+'  shift, and go to state 33
    '*'  shift, and go to state 34
    '/'  shift, and go to state 35
    '^'  shift, and go to state 36
    '<'  shift, and go to state 37
    '='  shift, and go to state 38
    '>'  shift, and go to state 39

    '-'       [reduce using rule 24 (exp)]
    '+'       [reduce using rule 24 (exp)]
    '*'       [reduce using rule 24 (exp)]
    '/'       [reduce using rule 24 (exp)]
    '^'       [reduce using rule 24 (exp)]
    '<'       [reduce using rule 24 (exp)]
    '='       [reduce using rule 24 (exp)]
    '>'       [reduce using rule 24 (exp)]
    $default  reduce using rule 24 (exp)


state 51

   16 command: IF exp $@2 THEN . commands $@3 ELSE $@4 commands FI

    $default  reduce using rule 7 (commands)

    commands  go to state 53


state 52

   19 command: WHILE $@5 exp $@6 . DO commands END

    DO  shift, and go to state 54


state 53

    8 commands: commands . command ';'
   16 command: IF exp $@2 THEN commands . $@3 ELSE $@4 commands FI

    IDENTIFIER  shift, and go to state 13
    IF          shift, and go to state 14
    WHILE       shift, and go to state 15
    SKIP        shift, and go to state 16
    READ        shift, and go to state 18
    WRITE       shift, and go to state 19

    $default  reduce using rule 14 ($@3)

    command  go to state 20
    $@3      go to state 55


state 54

   19 command: WHILE $@5 exp $@6 DO . commands END

    $default  reduce using rule 7 (commands)

    commands  go to state 56


state 55

   16 command: IF exp $@2 THEN commands $@3 . ELSE $@4 commands FI

    ELSE  shift, and go to state 57


state 56

    8 commands: commands . command ';'
   19 command: WHILE $@5 exp $@6 DO commands . END

    IDENTIFIER  shift, and go to state 13
    IF          shift, and go to state 14
    WHILE       shift, and go to state 15
    SKIP        shift, and go to state 16
    END         shift, and go to state 58
    READ        shift, and go to state 18
    WRITE       shift, and go to state 19

    command  go to state 20


state 57

   16 command: IF exp $@2 THEN commands $@3 ELSE . $@4 commands FI

    $default  reduce using rule 15 ($@4)

    $@4  go to state 59


state 58

   19 command: WHILE $@5 exp $@6 DO commands END .

    $default  reduce using rule 19 (command)


state 59

   16 command: IF exp $@2 THEN commands $@3 ELSE $@4 . commands FI

    $default  reduce using rule 7 (commands)

    commands  go to state 60


state 60

    8 commands: commands . command ';'
   16 command: IF exp $@2 THEN commands $@3 ELSE $@4 commands . FI

    IDENTIFIER  shift, and go to state 13
    IF          shift, and go to state 14
    WHILE       shift, and go to state 15
    SKIP        shift, and go to state 16
    FI          shift, and go to state 61
    READ        shift, and go to state 18
    WRITE       shift, and go to state 19

    command  go to state 20


state 61

   16 command: IF exp $@2 THEN commands $@3 ELSE $@4 commands FI .

    $default  reduce using rule 16 (command)
